--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "esbuild": "^0.20.2",
+    "esbuild": "^0.21.1",
     "nodemon": "^3.1.0",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
-    "sass": "^1.75.0",
+    "sass": "^1.77.0",
     "turbolinks": "^5.2.0"
   },
   "scripts": {
@@ -23,5 +23,6 @@
   },
   "browserslist": [
     "defaults"
-  ]
+  ],
+  "packageManager": "yarn@4.2.1"
 }
