--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "app",
-  "private": true,
+  "name": "AskIt",
+  "packageManager": "yarn@4.2.2",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "@rails/ujs": "^7.1.3-2",
+    "@rails/ujs": "7.1.3-4",
     "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "esbuild": "^0.21.1",
-    "nodemon": "^3.1.0",
+    "esbuild": "^0.21.4",
+    "nodemon": "^3.1.3",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
-    "sass": "^1.77.0",
+    "sass": "^1.77.4",
     "turbolinks": "^5.2.0"
   },
   "scripts": {
@@ -23,6 +23,5 @@
   },
   "browserslist": [
     "defaults"
-  ],
-  "packageManager": "yarn@4.2.1"
+  ]
 }
