--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "esbuild": "^0.21.4",
+    "jquery": "^3.7.1",
     "nodemon": "^3.1.3",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "sass": "^1.77.4",
-    "tom-select": "^2.3.1",
+    "select2": "^4.1.0-rc.0",
+    "select2-bootstrap-5-theme": "^1.3.0",
     "turbolinks": "^5.2.0"
   },
   "scripts": {
